[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-rt = "2.9.0"
actix-web = "4.4.1"
serde = {version = "1.0.130", features = ["derive"]}
actix-cors = "0.7.0"
repress-rs = {git = "https://github.com/kuv2707/repress-rs", branch = "master"}